--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -7,8 +7,9 @@
     "module": "es2020",
     "outDir": "dist",
     "paths": {
-      "@models/*": ["models/*"],
       "@controllers/*": ["controllers/*"],
+      "@helpers/*": ["helpers/*"],
+      "@models/*": ["models/*"],
       "@services/*": ["services/*"],
       "@routes/*": ["routes/*"]
     },
