--- a/apps/api/.prettierrc.json
+++ b/apps/api/.prettierrc.json
@@ -7,6 +7,7 @@
     "^@services/(.*)$",
     "^@controllers/(.*)$",
     "^@routes/(.*)$",
+    "^@helpers/(.*)$",
     "^[./]"
   ],
   "importOrderSeparation": true,
