--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^7.4.1"
   },
   "devDependencies": {
+    "@mongodb-js/zstd": "^1.1.0",
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.71",
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
