Add product to videos still WIP

--- a/apps/api/.swcrc
+++ b/apps/api/.swcrc
@@ -9,6 +9,7 @@
     "target": "es2020",
     "baseUrl": "./src",
     "paths": {
+      "@config/*": ["config/*"],
       "@controllers/*": ["controllers/*"],
       "@helpers/*": ["helpers/*"],
       "@models/*": ["models/*"],
