--- a/apps/api/.prettierrc.json
+++ b/apps/api/.prettierrc.json
@@ -1,8 +1,10 @@
 {
   "singleQuote": true,
   "semi": false,
+  "printWidth": 100,
   "plugins": ["@trivago/prettier-plugin-sort-imports"],
   "importOrder": [
+    "^@config/(.*)$",
     "^@models/(.*)$",
     "^@services/(.*)$",
     "^@controllers/(.*)$",
