--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "main": "dist/index.js",
   "scripts": {
-    "clean": "rm -rf dist",
+    "clean": "rimraf dist",
     "dev": "concurrently \"npm run watch-compile\" \"npm run watch-dev\"",
     "build": "swc src -d dist",
     "lint": "eslint --ext .ts src",
@@ -34,6 +34,7 @@
     "eslint-config-custom-server": "workspace:*",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.0",
+    "rimraf": "^5.0.1",
     "tsconfig": "workspace:*",
     "typescript": "^5.1.6"
   }
