--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "module-alias": "^2.2.3",
-    "mongoose": "^7.4.1"
+    "mongoose": "^7.4.1",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@mongodb-js/zstd": "^1.1.0",
