--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,6 +1,9 @@
 APP_HOST=localhost
-APP_PORT=3000
+APP_PORT=3001
 
-DB_HOST=127.0.0.1
+DB_URL=mongodb
+DB_USER=
+DB_PASSWORD=
+DB_HOST=
 DB_PORT=27017
 DB_NAME=tokopedia_play_clone
