--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,17 +26,19 @@
   "devDependencies": {
     "@mongodb-js/zstd": "^1.1.0",
     "@swc/cli": "^0.1.62",
-    "@swc/core": "^1.3.71",
+    "@swc/core": "^1.3.75",
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "@types/express": "^4.17.17",
-    "@types/node": "^20.4.4",
+    "@types/node": "^20.4.9",
     "chokidar": "^3.5.3",
     "concurrently": "^8.2.0",
     "eslint-config-custom-server": "workspace:*",
     "nodemon": "^3.0.1",
-    "prettier": "^3.0.0",
     "rimraf": "^5.0.1",
     "tsconfig": "workspace:*",
     "typescript": "^5.1.6"
+  },
+  "peerDependencies": {
+    "prettier": "^3.0.1"
   }
 }
