--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,15 +14,19 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.17",
+    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
+    "@types/react": "^18.2.19",
     "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
+    "@vitejs/plugin-react": "^4.0.4",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "eslint-config-custom": "workspace:*",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "tsconfig": "workspace:*",
     "typescript": "^5.1.6",
-    "vite": "^4.4.7"
+    "vite": "^4.4.9"
+  },
+  "peerDependencies": {
+    "prettier": "^3.0.1"
   }
 }
