--- a/packages/eslint-config-custom-server/package.json
+++ b/packages/eslint-config-custom-server/package.json
@@ -4,9 +4,11 @@
   "license": "MIT",
   "main": "index.js",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.2.0",
-    "@typescript-eslint/parser": "^6.2.0",
     "eslint-config-base": "workspace:*"
+  },
+  "peerDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0"
   },
   "publishConfig": {
     "access": "public"
