--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -4,12 +4,14 @@
   "license": "MIT",
   "main": "index.js",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.2.0",
-    "@typescript-eslint/parser": "^6.2.0",
     "eslint-config-base": "workspace:*",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-turbo": "latest",
     "eslint-plugin-react": "^7.33.0"
+  },
+  "peerDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0"
   },
   "publishConfig": {
     "access": "public"
