--- a/turbo.json
+++ b/turbo.json
@@ -11,7 +11,7 @@
       "cache": false,
       "persistent": true
     },
-    "preview": {
+    "start": {
       "cache": false,
       "persistent": true
     }
