--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -1,52 +1,53 @@
 FROM node:18-alpine AS base
-# Install package manager
-RUN npm install --global pnpm
-RUN npm install --global turbo
-
-# The web Dockerfile is copy-pasted into our main docs at /docs/handbook/deploying-with-docker.
-# Make sure you update this Dockerfile, the Dockerfile in the web workspace and copy that over to Dockerfile in the docs.
+    # Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
+    RUN apk add --no-cache libc6-compat
 
 FROM base AS builder
-# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
-RUN apk add --no-cache libc6-compat
-RUN apk update
-# Set working directory
-WORKDIR /app
-COPY . .
-RUN turbo prune --scope=api --docker
+    WORKDIR /app
 
-# Add lockfile and package.json's of isolated subworkspace
-FROM base AS installer
-RUN apk add --no-cache libc6-compat
-RUN apk update
-WORKDIR /app
+    RUN npm install -g turbo
 
-# First install dependencies (as they change less often)
-COPY .gitignore .gitignore
-COPY --from=builder /app/out/json/ .
-COPY --from=builder /app/out/pnpm-lock.yaml ./pnpm-lock.yaml
-RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
+    COPY . .
 
-# Build the project and its dependencies
-COPY --from=builder /app/out/full/ .
-COPY turbo.json turbo.json
+    RUN turbo prune --scope=api --docker
 
-# Uncomment and use build args to enable remote caching
-# ARG TURBO_TEAM
-# ENV TURBO_TEAM=$TURBO_TEAM
 
-# ARG TURBO_TOKEN
-# ENV TURBO_TOKEN=$TURBO_TOKEN
+FROM base as installer
+    WORKDIR /app
 
-RUN pnpm turbo run build --filter=api
+    RUN npm install -g pnpm
+    RUN npm install -g turbo
+
+    # First install dependencies (as they change less often)
+    COPY .gitignore .gitignore
+    COPY --from=builder /app/out/json/ .
+    COPY --from=builder /app/out/pnpm-lock.yaml ./pnpm-lock.yaml
+    RUN pnpm install
+
+    # Build the project and its dependencies
+    COPY --from=builder /app/out/full/ .
+    COPY turbo.json turbo.json
+
+    # Uncomment and use build args to enable remote caching
+    # ARG TURBO_TEAM
+    # ENV TURBO_TEAM=$TURBO_TEAM
+
+    # ARG TURBO_TOKEN
+    # ENV TURBO_TOKEN=$TURBO_TOKEN
+
+    RUN turbo run build --filter=api...
 
 FROM base AS runner
-WORKDIR /app
+    WORKDIR /app
 
-# Don't run production as root
-RUN addgroup --system --gid 1001 expressjs
-RUN adduser --system --uid 1001 expressjs
-USER expressjs
-COPY --from=installer /app .
+    RUN npm install -g pnpm
 
-CMD node apps/api/dist/index.js
+    # Don't run production as root
+    RUN addgroup --system --gid 1001 expressjs
+    RUN adduser --system --uid 1001 expressjs
+
+    USER expressjs
+    COPY --from=installer /app .
+
+    # TODO: Maybe use the npm script?
+    CMD pnpm --filter api run start
