--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,6 +17,7 @@
     "watch-dev": "nodemon --watch \"dist/**/*\" -e js ./dist/index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "module-alias": "^2.2.3",
@@ -28,6 +29,7 @@
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.75",
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.9",
     "chokidar": "^3.5.3",
