--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,7 +24,8 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "tsconfig": "workspace:*",
     "typescript": "^5.1.6",
-    "vite": "^4.4.9"
+    "vite": "^4.4.9",
+    "vite-tsconfig-paths": "^4.2.0"
   },
   "peerDependencies": {
     "prettier": "^3.0.1"
