--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,7 +8,7 @@
   "main": "dist/index.js",
   "scripts": {
     "clean": "rimraf dist",
-    "dev": "concurrently \"npm run watch-compile\" \"npm run watch-dev\"",
+    "dev": "NODE_ENV=development concurrently \"npm run watch-compile\" \"npm run watch-dev\"",
     "build": "swc src -d dist",
     "lint": "eslint --ext .ts src",
     "lint:fix": "eslint --ext .ts src --fix",
