--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,11 +8,11 @@
   "main": "dist/index.js",
   "scripts": {
     "clean": "rimraf dist",
-    "dev": "NODE_ENV=development concurrently \"npm run watch-compile\" \"npm run watch-dev\"",
+    "dev": "set NODE_ENV=development&& concurrently \"npm run watch-compile\" \"npm run watch-dev\"",
     "build": "swc src -d dist",
     "lint": "eslint --ext .ts src",
     "lint:fix": "eslint --ext .ts src --fix",
-    "start": "NODE_ENV=production node dist/index.js",
+    "start": "set NODE_ENV=production&& node dist/index.js",
     "watch-compile": "swc src -w --out-dir dist",
     "watch-dev": "nodemon --watch \"dist/**/*\" -e js ./dist/index.js"
   },
