--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,20 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@linaria/babel-preset": "^4.5.4",
-    "@linaria/core": "^4.5.4",
-    "@linaria/react": "^4.5.4",
     "@loadable/component": "^5.15.3",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^1.0.0",
-    "localforage": "^1.10.0",
-    "match-sorter": "^6.3.1",
+    "framer-motion": "^10.15.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
-    "sort-by": "^1.2.0"
+    "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
-    "@linaria/vite": "^4.5.4",
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "@types/loadable__component": "^5.13.4",
     "@types/react": "^18.2.19",
