--- a/turbo.json
+++ b/turbo.json
@@ -12,7 +12,7 @@
       "persistent": true
     },
     "start": {
-      "cache": false,
+      "cache": true,
       "persistent": true
     }
   }
