--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@turbo/gen": "^1.10.12",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.46.0",
     "eslint-config-custom": "workspace:*",
     "prettier": "^3.0.1",
